err/uparse-python.err
Listing '.'...
Listing './bin'...
Compiling './bin/uparse_faqual2fastq.py'...
Compiling './bin/uparse_fasta_number.py'...
Compiling './bin/uparse_fastq_strip_barcode_relabel.py'...
Compiling './bin/uparse_uc2otutab.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/uparse_python'...
Compiling './lib/python3.5/site-packages/uparse_python/die.py'...
***   File "./lib/python3.5/site-packages/uparse_python/die.py", line 19
    print "NOTHERE!!"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/uparse_python/faqual2fastq2.py'...
***   File "./lib/python3.5/site-packages/uparse_python/faqual2fastq2.py", line 53
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/uparse_python/fasta_number.py'...
***   File "./lib/python3.5/site-packages/uparse_python/fasta_number.py", line 38
    print ">%s%u;size=%u;" % (prefix, N, Size)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uparse_python/fastq.py'...
***   File "./lib/python3.5/site-packages/uparse_python/fastq.py", line 158
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/uparse_python/primer.py'...
***   File "./lib/python3.5/site-packages/uparse_python/primer.py", line 180
    print "Primer='" + Primer + '"'
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/uparse_python/uc.py'...
***   File "./lib/python3.5/site-packages/uparse_python/uc.py", line 49
    print Line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/uparse_python/uc2otutab.py'...
***   File "./lib/python3.5/site-packages/uparse_python/uc2otutab.py", line 23
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/uparse_python-0.1.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
